--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="description" content="Mini Cabs & Tours" />
     <meta name="author" content="Lovable" />
     
+    <link rel="icon" href="/logo.png" type="image/png">
 
-    <Link img rel="icon" href="/logo.png" />
+    <!--<Link img rel="icon" href="/logo.png" />-->
 
     <meta property="og:title" content="sri-lanka-tours-ai" />
     <meta property="og:description" content="Mini Cabs & Tours" />
